# openmpi_porgramming

./: CMakeLists.txt  hello  main.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
from_book/: trap.c
omp_pi/: pi  pi.c
omp_pi/parallel_for/: pi_for.c
omp_pi/parallel_for/from_online/: pi.c
omp_pi/reduction_omp/: pi_reduction.c
